--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,14 +35,15 @@ jobs:
       with:
         context: .
         target: builder
-        tags: |
+        tags:
           lofigirl:latest
     - name: Extract binary
-      run:
-        docker cp $(docker create lofigirl:latest):/app/target/release/lofigirl ${{ github.workspace }}/lofigirl
+      run: |
+        mkdir -p ${{ github.workspace }}/bin
+        docker cp $(docker create lofigirl:latest):/app/target/release/lofigirl ${{ github.workspace }}/bin
     - name: Make Zip 
       run: 
-        7z a -tzip ${{ github.workspace }}/lofigirl-linux.zip ${{ github.workspace }}/lofigirl
+        7z a -tzip ${{ github.workspace }}/bin/lofigirl-linux.zip ${{ github.workspace }}/bin/lofigirl
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
@@ -50,6 +51,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.once.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/lofigirl-linux.zip
+        asset_path: ${{ github.workspace }}/bin/lofigirl-linux.zip
         asset_name: lofigirl-linux.zip
         asset_content_type: application/octet-stream
