--- a/example_config.toml
+++ b/example_config.toml
@@ -10,3 +10,6 @@ token = "token"
 [video]
 link = "https::///www.youtube.com/something"
 second_link = "https::///www.youtube.com/something"
+
+[server]
+link = "http://127.0.0.1:8080"
