--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ members = [
     "lofigirl_client", 
     "lofigirl_sys", 
     "lofigirl_shared",
-    "lofigirl_server"
+    "lofigirl_server",
+    "lofigirl_frontend"
 ]
