--- a/lofigirl_frontend/Cargo.toml
+++ b/lofigirl_frontend/Cargo.toml
@@ -14,6 +14,8 @@ wasm-bindgen-test = "0.3"
 
 [dependencies]
 seed = "0.8"
+lofigirl_shared = { path = "../lofigirl_shared"}
+# lofigirl = { path = "../lofigirl_client"}
 
 [profile.release]
 lto = true
