Split listen from shared so wasm compilation is possible

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "lofigirl_sys", 
     "lofigirl_shared",
     "lofigirl_server",
-    "lofigirl_frontend"
+    "lofigirl_frontend",
+    "lofigirl_listen"
 ]
