--- a/lofigirl_client/Cargo.toml
+++ b/lofigirl_client/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 lofigirl_sys = { path = "../lofigirl_sys", optional = true }
 lofigirl_shared = { path = "../lofigirl_shared"}
+lofigirl_listen = { path = "../lofigirl_listen"}
 reqwest = "0.11"
 serde_json = "1.0"
 toml = "0.5"
