--- a/lofigirl_shared_common/Cargo.toml
+++ b/lofigirl_shared_common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lofigirl_listen"
+name = "lofigirl_shared_common"
 version = "0.1.0"
 authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lofigirl_shared = {path = "../lofigirl_shared"}
-rustfm-scrobble = "1.1"
-listenbrainz = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+
 anyhow = "1.0"
 thiserror = "1.0"
+strsim = "0.10"
+once_cell = "1.7"
+notify-rust = { version = "4.5", optional = true }
+
+[features]
+notify = ["notify-rust"]
