--- a/lofigirl_shared_listen/Cargo.toml
+++ b/lofigirl_shared_listen/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lofigirl_shared"
+name = "lofigirl_shared_listen"
 version = "0.1.0"
 authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
 edition = "2018"
@@ -7,13 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-
+lofigirl_shared_common = {path = "../lofigirl_shared_common"}
+rustfm-scrobble = "1.1"
+listenbrainz = "0.3"
 anyhow = "1.0"
 thiserror = "1.0"
-strsim = "0.10"
-once_cell = "1.7"
-notify-rust = { version = "4.5", optional = true }
-
-[features]
-notify = ["notify-rust"]
