--- a/lofigirl_sys/Cargo.toml
+++ b/lofigirl_sys/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lofigirl_shared = { path = "../lofigirl_shared"}
+lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 opencv = { version = "0.53", features = ["clang-runtime"]}
 leptess = "0.13"
 anyhow = "1.0"
