--- a/lofigirl_client/Cargo.toml
+++ b/lofigirl_client/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "lofigirl"
+name = "lofigirl_client"
 version = "0.1.1"
 authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 lofigirl_sys = { path = "../lofigirl_sys", optional = true }
-lofigirl_shared = { path = "../lofigirl_shared"}
-lofigirl_listen = { path = "../lofigirl_listen"}
+lofigirl_shared_common = { path = "../lofigirl_shared_common"}
+lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
 reqwest = "0.11"
 serde_json = "1.0"
 toml = "0.5"
