--- a/lofigirl_frontend/Cargo.toml
+++ b/lofigirl_frontend/Cargo.toml
@@ -14,13 +14,7 @@ wasm-bindgen-test = "0.3"
 
 [dependencies]
 seed = "0.8"
-lofigirl_shared = { path = "../lofigirl_shared"}
-# lofigirl = { path = "../lofigirl_client"}
-
-[profile.release]
-lto = true
-opt-level = 'z'
-codegen-units = 1
+lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ['-Os']
