--- a/lofigirl_server/Cargo.toml
+++ b/lofigirl_server/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 actix-web = "=4.0.0-beta.5"
 actix-service = "=2.0.0-beta.5"
 actix-http = "=3.0.0-beta.5"
+actix-cors = "0.6.0-beta.1"
 actix-rt = "2.2"
 thiserror = "1.0"
 structopt = "0.3"
