--- a/lofigirl_shared_listen/Cargo.toml
+++ b/lofigirl_shared_listen/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 lofigirl_shared_common = {path = "../lofigirl_shared_common"}
+notify-rust = { version = "4.5", optional = true }
 rustfm-scrobble = "1.1"
 listenbrainz = "0.3"
 anyhow = "1.0"
