--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -101,4 +101,28 @@ jobs:
         asset_path: ${{ github.workspace }}/target/release/lofigirl-with-notifications-${{ matrix.os }}.zip
         asset_name: lofigirl-with-notifications-${{ matrix.os }}.zip
         asset_content_type: application/octet-stream
-    
+  build_frontend:
+    name: Create single platform wasm
+    needs: once
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Build release version
+      run: |
+        cargo install cargo-make
+        cd lofigirl_frontend
+        cargo make build_release
+    - name: Make Zip
+      run: 
+        7z a -tzip ${{ github.workspace }}/lofigirl-frontend.zip ${{ github.workspace }}/lofigirl_frontend/index.html ${{ github.workspace }}/lofigirl_frontend/pkg/
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ needs.once.outputs.upload_url }}
+        asset_path: ${{ github.workspace }}/lofigirl-frontend.zip
+        asset_name: lofigirl-frontend.zip
+        asset_content_type: application/octet-stream    
