--- a/lofigirl_client/Cargo.toml
+++ b/lofigirl_client/Cargo.toml
@@ -12,7 +12,7 @@ reqwest = "0.11"
 serde_json = "1.0"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"]}
-tokio = { version = "1.5", features = ["rt", "time"] }
+tokio = { version = "1.5", features = ["rt", "fs", "time"] }
 structopt = "0.3"
 anyhow = "1.0"
 thiserror = "1.0"
