--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -111,11 +111,11 @@ jobs:
     - name: Build release version
       run: |
         cargo install cargo-make
-        cd lofigirl_frontend
+        cd lofigirl_web_client
         cargo make build_release
     - name: Make Zip
       run: 
-        7z a -tzip ${{ github.workspace }}/lofigirl-frontend.zip ${{ github.workspace }}/lofigirl_frontend/index.html ${{ github.workspace }}/lofigirl_frontend/pkg/
+        7z a -tzip ${{ github.workspace }}/lofigirl-web.zip ${{ github.workspace }}/lofigirl_web_client/index.html ${{ github.workspace }}/lofigirl_web_client/pkg/
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
@@ -123,6 +123,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.once.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/lofigirl-frontend.zip
-        asset_name: lofigirl-frontend.zip
+        asset_path: ${{ github.workspace }}/lofigirl-web.zip
+        asset_name: lofigirl-web.zip
         asset_content_type: application/octet-stream    
