--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,8 +46,8 @@ jobs:
         docker cp $(docker create lofigirl:latest):/app/bin/. ${{ github.workspace }}/bin
     - name: Make Zip(s)
       run: |
-        7z a -tzip ${{ github.workspace }}/bin/lofigirl.zip ${{ github.workspace }}/bin/lofigirl
-        7z a -tzip ${{ github.workspace }}/bin/lofigirl_standalone.zip ${{ github.workspace }}/bin/lofigirl_standalone
+        7z a -tzip ${{ github.workspace }}/bin/lofigirl_client.zip ${{ github.workspace }}/bin/lofigirl_client
+        7z a -tzip ${{ github.workspace }}/bin/lofigirl_client_standalone.zip ${{ github.workspace }}/bin/lofigirl_client_standalone
         7z a -tzip ${{ github.workspace }}/bin/lofigirl_server.zip ${{ github.workspace }}/bin/lofigirl_server
     - name: Upload Release Asset Client
       uses: actions/upload-release-asset@v1
@@ -55,8 +55,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.once.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/bin/lofigirl.zip
-        asset_name: lofigirl-linux.zip
+        asset_path: ${{ github.workspace }}/bin/lofigirl_client.zip
+        asset_name: lofigirl-client-linux.zip
         asset_content_type: application/octet-stream
     - name: Upload Release Asset Standalone Client
       uses: actions/upload-release-asset@v1
@@ -64,8 +64,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.once.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/bin/lofigirl_standalone.zip
-        asset_name: lofigirl-standalone-linux.zip
+        asset_path: ${{ github.workspace }}/bin/lofigirl_client_standalone.zip
+        asset_name: lofigirl-client-standalone-linux.zip
         asset_content_type: application/octet-stream
     - name: Upload Release Asset Server
       uses: actions/upload-release-asset@v1
@@ -115,7 +115,7 @@ jobs:
         cargo make build_release
     - name: Make Zip
       run: 
-        7z a -tzip ${{ github.workspace }}/lofigirl-web.zip ${{ github.workspace }}/lofigirl_web_client/index.html ${{ github.workspace }}/lofigirl_web_client/pkg/
+        7z a -tzip ${{ github.workspace }}/lofigirl-web-client.zip ${{ github.workspace }}/lofigirl_web_client/index.html ${{ github.workspace }}/lofigirl_web_client/pkg/
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
@@ -123,6 +123,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.once.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/lofigirl-web.zip
-        asset_name: lofigirl-web.zip
+        asset_path: ${{ github.workspace }}/lofigirl-web-client.zip
+        asset_name: lofigirl-web-client.zip
         asset_content_type: application/octet-stream    
