--- a/lofigirl_client/Cargo.toml
+++ b/lofigirl_client/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 lofigirl_sys = { path = "../lofigirl_sys", optional = true }
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
-reqwest = "0.11"
+reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"]}
