--- a/lofigirl_sys/Cargo.toml
+++ b/lofigirl_sys/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 opencv = { version = "0.53", features = ["clang-runtime"]}
-rustube = "0.3.0-beta.1"
+rustube = "0.3"
 leptess = "0.13"
 anyhow = "1.0"
 thiserror = "1.0"
