--- a/lofigirl_server/Cargo.toml
+++ b/lofigirl_server/Cargo.toml
@@ -12,10 +12,10 @@ lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
 serde = { version = "1.0", features = ["derive"] }
 # actix 4 beta usage for tokio 1.x
-actix-web = "=4.0.0-beta.5"
-actix-service = "=2.0.0-beta.5"
-actix-http = "=3.0.0-beta.5"
-actix-cors = "0.6.0-beta.1"
+actix-web = "=4.0.0-beta.8"
+actix-service = "2.0"
+actix-http = "=3.0.0-beta.8"
+actix-cors = "0.6.0-beta.2"
 actix-rt = "2.2"
 sqlx = { version = "0.5", features = ["sqlite", "runtime-actix-native-tls"] }
 uuid = { version = "0.8", features = ["v4"] }
