--- a/lofigirl_sys/Cargo.toml
+++ b/lofigirl_sys/Cargo.toml
@@ -9,8 +9,12 @@ edition = "2021"
 [dependencies]
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 opencv = { version = "0.62", features = ["clang-runtime"]}
-rustube = "0.3"
+ytextract = "0.10"
+rustube = {version = "0.3", optional = true}
 leptess = "0.13"
 anyhow = "1.0"
 thiserror = "1.0"
 url = "2.2"
+
+[features]
+no_ytextract = ["rustube"]
