--- a/lofigirl_server/Cargo.toml
+++ b/lofigirl_server/Cargo.toml
@@ -11,9 +11,8 @@ lofigirl_sys = { path = "../lofigirl_sys"}
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
 serde = { version = "1.0", features = ["derive"] }
-# actix 4 beta usage for tokio 1.x
-actix-web = "=4.0.1"
-actix-cors = "0.6.0"
+actix-web = "4.0"
+actix-cors = "0.6"
 actix-rt = "2.6"
 sqlx = { version = "0.5", features = ["sqlite", "runtime-actix-native-tls"] }
 uuid = { version = "0.8", features = ["v4"] }
