Add logging with tracing

--- a/lofigirl_client/Cargo.toml
+++ b/lofigirl_client/Cargo.toml
@@ -16,6 +16,8 @@ tokio = { version = "1.16", features = ["rt", "fs", "time"] }
 structopt = "0.3"
 anyhow = "1.0"
 thiserror = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 url = { version = "2.2", optional = true}
 notify-rust = { version = "4.5", optional = true }
 
