--- a/lofigirl_sys/Cargo.toml
+++ b/lofigirl_sys/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 [dependencies]
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 opencv = { version = "0.64", features = ["clang-runtime"]}
-ytextract = "0.11"
-rustube = {version = "0.3", optional = true}
+ytextract = { version = "0.11", optional = true}
+rustube = "0.3"
 leptess = "0.13"
 anyhow = "1.0"
 thiserror = "1.0"
@@ -18,4 +18,4 @@ url = "2.2"
 tracing = "0.1"
 
 [features]
-no_ytextract = ["rustube"]
+no_ytextract = ["ytextract"]
