--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,10 +47,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-    - uses: actions/checkout@v3
-    - uses: subosito/flutter-action@v2
+      uses: actions/checkout@v3
+    - name: Build
+      uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
-    - run: flutter pub get
-    - run: flutter test
-    - run: flutter build web
+      run: flutter pub get
+      run: flutter test
+      run: flutter build web
