--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,10 +48,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Build
-      uses: subosito/flutter-action@v2
+    - uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
-      run: flutter pub get
-      run: flutter test
-      run: flutter build web
+    - name: Build / Test
+      run: |
+       flutter pub get
+       flutter test
+       flutter build web
