--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Build
       run: cargo build -p lofigirl_client --features notify
-  build_frontend:
+  build_wasm_frontend:
     name: Build single platform wasm
     runs-on: ubuntu-latest
     steps:
@@ -53,6 +53,7 @@ jobs:
         channel: 'stable'
     - name: Build / Test
       run: |
+       cd lofigirl_flutter_client
        flutter pub get
        flutter test
        flutter build web
