--- a/lofigirl_client/Cargo.toml
+++ b/lofigirl_client/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"]}
 tokio = { version = "1.16", features = ["rt", "fs", "time"] }
-structopt = "0.3"
+clap = { version = "3.2", features = ["derive"] }
 anyhow = "1.0"
 thiserror = "1.0"
 tracing = "0.1"
