Server to clap4

--- a/lofigirl_server/Cargo.toml
+++ b/lofigirl_server/Cargo.toml
@@ -17,7 +17,7 @@ actix-rt = "2.7"
 sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls"] }
 uuid = { version = "1.1", features = ["v4"] }
 thiserror = "1.0"
-structopt = "0.3"
+clap = "4.0"
 toml = "0.5"
 anyhow = "1.0"
 url = "2.2"
