--- a/lofigirl_sys/Cargo.toml
+++ b/lofigirl_sys/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2021"
 
 [dependencies]
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
-opencv = { version = "0.65", features = ["clang-runtime"]}
+opencv = "0.76"
 ytextract = { version = "0.11", optional = true}
 rustube = "0.6"
 leptess = "0.13"
 anyhow = "1.0"
 thiserror = "1.0"
-url = "2.2"
+url = "2.3"
 tracing = "0.1"
 
 [features]
