chore: change cicd to only build when source file change

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,18 @@ name: Build on Pull Request
 on:  
   push:
     branches: [ main ]
+    paths:
+      - '**.rs'
+      - 'Cargo.lock'
+      - 'Cargo.toml'
+      - '**.dart'
   pull_request:
     branches: [ main ]
+    paths:
+      - '**.rs'
+      - 'Cargo.lock'
+      - 'Cargo.toml'
+      - '**.dart'
 
 env:
   CARGO_TERM_COLOR: always
