--- a/lofigirl_web_client/Cargo.toml
+++ b/lofigirl_web_client/Cargo.toml
@@ -13,7 +13,11 @@ crate-type = ["cdylib"]
 wasm-bindgen-test = "0.3"
 
 [dependencies]
-seed = "0.9"
+anyhow = "1.0"
+gloo-console = "0.2"
+gloo-net = "0.3"
+gloo-storage = "0.2"
+seed = "0.10"
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 
 [package.metadata.wasm-pack.profile.release]
