--- a/lofigirl_sys/Cargo.toml
+++ b/lofigirl_sys/Cargo.toml
@@ -8,14 +8,15 @@ edition = "2021"
 
 [dependencies]
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
-opencv = { version = "0.84", features = ["clang-runtime"] }
-ytextract = { version = "0.11", optional = true}
-rustube = "0.6"
+opencv = { version = "0.86", features = ["clang-runtime"] }
+rustube = { version = "0.6", optional = true }
+rusty_ytdl = "0.6"
 leptess = "0.14"
 anyhow = "1.0"
 thiserror = "1.0"
-url = "2.3"
+url = "2.4"
 tracing = "0.1"
+tempfile = "3.8"
 
 [features]
-use_ytextract = ["ytextract"]
+alt_yt_backend = ["rustube"]
