feat: change docker base to debian

--- a/Dockerfile.archlinux
+++ b/Dockerfile.archlinux
@@ -1,15 +1,14 @@
-FROM debian:bookworm AS builder
+FROM archlinux AS builder
 
 WORKDIR /app
 
 COPY ./ ./
 
-RUN apt update
-RUN apt upgrade -y
-RUN apt install -y build-essential libopencv-dev curl libssl-dev libleptonica-dev clang libclang-dev libtesseract-dev pkg-config sqlite3
+RUN pacman-key --init
+RUN pacman --noconfirm -Syu
+RUN pacman --noconfirm -S openssl pkgconf opencv vtk hdf5 qt5-base glew tesseract clang rustup sqlite
 
-RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
-ENV PATH="/root/.cargo/bin:${PATH}"
+RUN rustup toolchain install stable
 
 ENV DATABASE_URL=sqlite:token.db
 RUN sqlite3 token.db < migrations/20210525000135_table.sql 
@@ -21,14 +20,14 @@ RUN cargo build --release -p lofigirl_client -p lofigirl_server
 RUN mv ./target/release/lofigirl_client /app/bin/
 RUN mv ./target/release/lofigirl_server /app/bin/
 
-FROM debian:bookworm as runner
+FROM archlinux as runner
 
 COPY --from=builder /app/bin/lofigirl_client /usr/bin/
 COPY --from=builder /app/bin/lofigirl_server /usr/bin/
 COPY --from=builder /app/bin/lofigirl_client_standalone /usr/bin/
 
-RUN apt update
-RUN apt upgrade -y
-RUN apt install -y libopencv-dev libleptonica-dev libtesseract-dev tesseract-ocr-eng
+RUN pacman-key --init
+RUN pacman --noconfirm -Syu
+RUN pacman --noconfirm -S opencv vtk hdf5 qt5-base glew tesseract tesseract-data-eng 
 
 ENTRYPOINT [ "lofigirl_server" ]
