--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
         target: builder
         tags:
           lofigirl:latest
-    - name: Extract binary
+    - name: Extract binaries from the docker
       run: |
         mkdir -p ${{ github.workspace }}/bin
         docker cp $(docker create lofigirl:latest):/app/bin/. ${{ github.workspace }}/bin
