--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,30 +27,14 @@ jobs:
         target: builder
         tags:
           lofigirl:latest
-    - name: Extract binaries from the docker
-      run: |
-        mkdir -p ${{ github.workspace }}/bin
-        docker cp $(docker create lofigirl:latest):/app/bin/. ${{ github.workspace }}/bin
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: lofigirl_server
-        path: ${{ github.workspace }}/bin/lofigirl_server
-        overwrite: true
   build_client:
-    name: Client build
+    name: Client build with notification support
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
     - name: Build
-      run: cargo build --release -p lofigirl_client --features notify
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: lofigirl_client
-        path: target/release/lofigirl_client
-        overwrite: true
+      run: cargo build -p lofigirl_client --features notify
   build_wasm_frontend:
     name: Build single platform wasm
     runs-on: ubuntu-latest
