--- a/lofigirl_client/Cargo.toml
+++ b/lofigirl_client/Cargo.toml
@@ -9,6 +9,7 @@ lofigirl_sys = { path = "../lofigirl_sys", optional = true }
 lofigirl_shared_common = { path = "../lofigirl_shared_common"}
 lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
 reqwest = { version = "0.12", features = ["json"] }
+reqwest-websocket = "0.4"
 serde_json = "1.0"
 toml = "0.8"
 serde = { version = "1.0", features = ["derive"]}
@@ -21,6 +22,7 @@ tracing-subscriber = "0.3"
 url = "2.5"
 notify-rust = { version = "4.11", optional = true }
 percent-encoding = "2.3"
+futures-util = "0.3"
 
 
 [features]
