--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,7 +2,10 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - 'main'
+    tags:
+      - 'v*'
     paths:
       - '**.rs'
       - 'Cargo.lock'
@@ -12,9 +15,18 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    strategy:
+      platform:
+        linux/amd64
+        linux/arm64
+        linux/arm/v7
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to DockerHub
         uses: docker/login-action@v3 
         with:
@@ -37,6 +49,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: ${{ matrix.platform }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
